# receiptwitness

./: .dockerignore  .grype.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  index.html  lighthouserc.json  nginx.conf  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vite.config.ts  vitest.config.ts
alembic/: env.py
api/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
api/.github/workflows/: ci.yml
api/alembic/: env.py
api/alembic/versions/: 001_encrypt_session_data.py  002_better_auth_tables.py  003_make_users_hashed_password_nullable.py  004_fix_user_id_text.py  005_add_email_inbound_token.py  006_email_inbound_token_server_default.py  008_create_domain_tables.py  009_add_gin_index_upc_variants.py
api/src/cartsnitch_api/: cache.py  config.py  constants.py  database.py  main.py  schemas.py  types.py
api/src/cartsnitch_api/auth/: dependencies.py  jwt.py  passwords.py  routes.py
api/src/cartsnitch_api/middleware/: audit.py  cors.py  error_handler.py  rate_limit.py
api/src/cartsnitch_api/models/: __init__.py  base.py  coupon.py  price.py  product.py  purchase.py  shrinkflation.py  store.py  user.py
api/src/cartsnitch_api/routes/: alerts.py  coupons.py  health.py  prices.py  products.py  public.py  purchases.py  scraping.py  shopping.py  stores.py  user.py
api/src/cartsnitch_api/services/: alerts.py  auth.py  clipartist.py  coupons.py  prices.py  products.py  public.py  purchases.py  queries.py  receiptwitness.py  shrinkray.py  stickershock.py  stores.py
api/tests/: conftest.py  test_config.py  test_encrypted_json.py  test_models.py  test_openapi.py
api/tests/test_auth/: test_auth_endpoints.py
api/tests/test_e2e/: conftest.py  test_auth_validation.py  test_cross_resource_flow.py  test_email_in_address.py  test_error_responses.py  test_price_history.py  test_product_search_lookup.py  test_public_endpoints.py  test_purchase_flow.py
api/tests/test_middleware/: conftest.py  test_error_handler.py  test_rate_limit.py
api/tests/test_routes/: test_alerts.py  test_coupons.py  test_prices.py  test_products.py  test_public.py  test_purchases.py  test_stores.py
auth/: .env.example  (+3 more)
common/: README.md  pyproject.toml
common/alembic/: env.py
common/src/cartsnitch_common/models/: product.py  user.py
common/src/cartsnitch_common/seed/: runner.py
receiptwitness/: Dockerfile  pyproject.toml  renovate.json
receiptwitness/.github/workflows/: ci.yml
receiptwitness/src/receiptwitness/: __init__.py  config.py  events.py  main.py
receiptwitness/src/receiptwitness/api/: routes.py
receiptwitness/src/receiptwitness/notifications/: email.py
receiptwitness/src/receiptwitness/parsers/: __init__.py  kroger.py  meijer.py  target.py
receiptwitness/src/receiptwitness/pipeline/: normalization.py
receiptwitness/src/receiptwitness/queue/: __init__.py  email.py
receiptwitness/src/receiptwitness/scrapers/: base.py  target.py
receiptwitness/tests/: conftest.py
receiptwitness/tests/fixtures/: kroger_email_receipt.html  meijer_email_receipt.html  meijer_receipt.json  target_email_receipt.html  target_receipt.json
receiptwitness/tests/test_api/: __init__.py  test_webhook.py
receiptwitness/tests/test_parsers/: test_meijer_parser.py  test_target_parser.py
receiptwitness/tests/test_pipeline/: conftest.py  test_matching.py  test_normalization.py
receiptwitness/tests/test_regression/: test_rate_limiting.py  test_schema_validation.py
receiptwitness/tests/test_scrapers/: test_kroger_scraper.py  test_meijer_scraper.py
receiptwitness/tests/test_session/: test_encryption.py
receiptwitness/tests/test_worker/: test_email_worker.py
(+139 files in other folders)
